<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.wks</groupId>
	<artifactId>platform</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>wks-platform</name>

	<properties>
		<project.javadoc.outputDirectory>website/static/javadoc</project.javadoc.outputDirectory>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<java.version>17</java.version>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.source>17</maven.compiler.source>

		<servlet-api.version>2.5</servlet-api.version>

		<spring.boot.version>4.0.5</spring.boot.version>
		<snakeyaml.version>2.0</snakeyaml.version>
		<spring.shell.version>2.0.1.RELEASE</spring.shell.version>
		<spring.doc.version>3.0.2</spring.doc.version>

		<camunda7.version>7.20.0</camunda7.version>
		<camunda8.version>8.4.5</camunda8.version>
		<camunda8.spring.version>8.4.2</camunda8.spring.version>
		<camunda-bpm-junit5.version>1.1.0</camunda-bpm-junit5.version>

		<lombok.version>1.18.22</lombok.version>
		<gson.version>2.10.1</gson.version>
		<h2.version>2.1.214</h2.version>
		<mongo.version>4.11.2</mongo.version>
		<minio.version>8.4.5</minio.version>

		<findbugs-version>3.0.2</findbugs-version>
		<jackson-version>2.14.1</jackson-version>
		<jackson-databind-version>2.14.1</jackson-databind-version>
		<jackson-databind-nullable-version>0.2.6</jackson-databind-nullable-version>
		<jakarta-annotation-version>1.3.5</jakarta-annotation-version>
		<jaxb.version>2.3.1</jaxb.version>
		<junit-version>4.13.2</junit-version>

	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring.boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.yaml</groupId>
				<artifactId>snakeyaml</artifactId>
				<version>${snakeyaml.version}</version>
				<scope>runtime</scope>
			</dependency>

			<dependency>
				<groupId>com.github.ben-manes.caffeine</groupId>
				<artifactId>caffeine</artifactId>
				<version>2.5.5</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<modules>
		<!-- Libraries -->
		<module>services/case-engine-rest-api</module>
		<module>libraries/case-engine</module>

		 <module>libraries/c7-client</module>
		<module>libraries/bpm-engine-interface</module>
		
		<module>libraries/c7-plugins</module>
		
		
		

		<module>services/demo-data-loader</module>
		<module>libraries/api-security</module>
		<module>libraries/case-engine-rest-dto</module>
		<module>libraries/case-engine-rest-client</module>
		

    <module>libraries/c8-client</module>
	<module>libraries/bpm-engine-client</module>
		
		
		 <module>services/c7-external-tasks</module> 
		<module>services/c8-external-tasks</module>
		<module>services/storage-api</module>
		
		
		
	</modules>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.4.0</version>
				<configuration>
					<reportOutputDirectory>${project.javadoc.outputDirectory}</reportOutputDirectory>
					<destDir>.</destDir>
				</configuration>
				<executions>
					<execution>
						<id>aggregate</id>
						<goals>
							<goal>aggregate</goal>
						</goals>
						<phase>site</phase>
					</execution>
				</executions>
			</plugin>
			<plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.11.0</version>
            <configuration>
                <parameters>true</parameters>
                <source>17</source>  <!-- or your Java version -->
                <target>17</target>
            </configuration>
        </plugin>
		</plugins>
	</build>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/wkspower/wks-platform</url>
		</repository>
	</distributionManagement>

</project>